= Change Log =

== ZMAT 0.9.9 (Foxy the Fantastic Mr. Fox - RC1), FangQ <q.fang (a) neu.edu> ==

 2023-10-13 [d5b2c40] revert blosc2 to v2.8.0 to remove new dependency libdl
 2023-10-13 [f2eadb5] fix broken test
 2023-10-13 [e6bbda1] update cmake file, update README
 2023-10-13 [bc760d5] Merge branch 'master' of github.com:NeuroJSON/zmat
 2023-10-13 [7472d29] update blosc2 to v2.10.5, update zstd to 1.5.5
 2023-10-13 [437f300] rename zstd folder without version number
 2023-10-13*[f4408f6] use miniz by default, rename zstd folder name
 2023-10-13 [fcaa396] update lz4 to 1.9.4
 2023-10-13 [57115dd] Update README.rst
 2023-09-14 [e50dc6b] build octave mex with octave 8.3 on windows
 2023-09-14 [edbeae9] update compilezmat.m without blosc2 and zstd support
 2023-06-27 [906d422] run a simpler version of octave test on windows
 2023-06-25 [d628473] run demo
 2023-06-25 [8c97c17] run full test on windows
 2023-06-25 [a28f9c7] use simple test on windows
 2023-06-25 [f443ef7] skip error testing on windows and mac
 2023-06-25 [2d6732c] add matlab mex build on ubuntu 16.04
 2023-06-24 [68eede3] add new octave mex for windows and mac
 2023-06-24 [7416b2c] double quote windows libloc
 2023-06-24 [d9f239c] static link zlib again
 2023-06-24 [cf8b9d4] fix windows matlab path
 2023-06-24 [05be0d6] add additional path for libmx
 2023-06-23 [30beb86] test ubuntu 20.04 build error
 2023-06-23 [3383f74] fix windows mx/mex not found issue
 2023-06-23 [910be8b] fix quotation mark issue
 2023-06-23 [fb1a63d] upload all zip files
 2023-06-22 [6f6b493] upload only the allinone package
 2023-06-21 [2751923] strip mex file to reduce size
 2023-06-21 [1461b9b] remove -lz from static linking on linux
 2023-06-21 [df92d96] add LDFLAGS to mkoctfile
 2023-06-10 [e3303c5] base64 no longer add new line by default, use level=3 to restore
 2023-06-06*[ff150ae] support miniz-based gzip compression and decompression, update test
 2023-06-06 [e098fd2] use miniz for gzip decompression